umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@h2o2.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2
order: 2
equivalence_sets:
  - - O(0)
    - O(1)
  - - H(2)
    - H(3)
