umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@icosahedron_b12.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Ih
order: 120
equivalence_sets:
  - - B(0)
    - B(1)
    - B(2)
    - B(3)
    - B(4)
    - B(5)
    - B(6)
    - B(7)
    - B(8)
    - B(9)
    - B(10)
    - B(11)
