umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@literature_calixarene_c4.snap
---
source: umol-geometric/tests/perception/mod.rs
assertion_line: 77
expression: result
---
point_group: C4
order: 4
equivalence_sets:
  - - O(0)
    - O(1)
    - O(2)
    - O(3)
  - - H(4)
    - H(5)
    - H(6)
    - H(7)
  - - C(8)
    - C(9)
    - C(10)
    - C(11)
  - - H(12)
    - H(13)
    - H(14)
    - H(15)
  - - C(16)
    - C(17)
    - C(18)
    - C(19)
  - - C(20)
    - C(21)
    - C(22)
    - C(23)
  - - C(24)
    - C(25)
    - C(26)
    - C(27)
  - - C(28)
    - C(29)
    - C(30)
    - C(31)
  - - C(32)
    - C(33)
    - C(34)
    - C(35)
  - - H(36)
    - H(37)
    - H(38)
    - H(39)
  - - C(40)
    - C(41)
    - C(42)
    - C(43)
  - - H(44)
    - H(45)
    - H(46)
    - H(47)
  - - C(48)
    - C(49)
    - C(50)
    - C(51)
  - - H(52)
    - H(53)
    - H(54)
    - H(55)
  - - C(56)
    - C(57)
    - C(58)
    - C(59)
  - - H(60)
    - H(61)
    - H(62)
    - H(63)
  - - H(64)
    - H(65)
    - H(66)
    - H(67)
  - - C(68)
    - C(69)
    - C(70)
    - C(71)
  - - H(72)
    - H(73)
    - H(74)
    - H(75)
  - - C(76)
    - C(77)
    - C(78)
    - C(79)
  - - H(80)
    - H(81)
    - H(82)
    - H(83)
  - - H(84)
    - H(85)
    - H(86)
    - H(87)
  - - C(88)
    - C(89)
    - C(90)
    - C(91)
  - - H(92)
    - H(93)
    - H(94)
    - H(95)
  - - C(96)
    - C(97)
    - C(98)
    - C(99)
  - - H(100)
    - H(101)
    - H(102)
    - H(103)
  - - C(104)
    - C(105)
    - C(106)
    - C(107)
