umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@literature_dirhodium_c4.snap
---
source: umol-geometric/tests/perception/mod.rs
assertion_line: 77
expression: result
---
point_group: C4
order: 4
equivalence_sets:
  - - Rh(0)
  - - Rh(1)
  - - Cl(2)
  - - F(3)
    - F(4)
    - F(5)
    - F(6)
  - - N(7)
    - N(8)
    - N(9)
    - N(10)
  - - N(11)
    - N(12)
    - N(13)
    - N(14)
  - - C(15)
    - C(16)
    - C(17)
    - C(18)
  - - H(19)
    - H(20)
    - H(21)
    - H(22)
  - - C(23)
    - C(24)
    - C(25)
    - C(26)
  - - H(27)
    - H(28)
    - H(29)
    - H(30)
  - - C(31)
    - C(32)
    - C(33)
    - C(34)
  - - H(35)
    - H(36)
    - H(37)
    - H(38)
  - - C(39)
    - C(40)
    - C(41)
    - C(42)
  - - H(43)
    - H(44)
    - H(45)
    - H(46)
  - - C(47)
    - C(48)
    - C(49)
    - C(50)
  - - C(51)
    - C(52)
    - C(53)
    - C(54)
  - - C(55)
    - C(56)
    - C(57)
    - C(58)
  - - C(59)
    - C(60)
    - C(61)
    - C(62)
  - - H(63)
    - H(64)
    - H(65)
    - H(66)
  - - C(67)
    - C(68)
    - C(69)
    - C(70)
  - - H(71)
    - H(72)
    - H(73)
    - H(74)
  - - C(75)
    - C(76)
    - C(77)
    - C(78)
  - - H(79)
    - H(80)
    - H(81)
    - H(82)
  - - C(83)
    - C(84)
    - C(85)
    - C(86)
  - - H(87)
    - H(88)
    - H(89)
    - H(90)
