umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@literature_diruthenium_tetrakis_triazene_c4.snap
---
source: umol-geometric/tests/perception/mod.rs
assertion_line: 77
expression: result
---
point_group: C4
order: 4
equivalence_sets:
  - - Ru(0)
  - - Ru(1)
  - - Cl(2)
  - - N(3)
    - N(4)
    - N(5)
    - C(6)
  - - C(7)
    - H(8)
    - C(9)
    - H(10)
  - - C(11)
    - H(12)
    - C(13)
    - H(14)
  - - C(15)
    - H(16)
    - C(17)
    - C(18)
  - - H(19)
    - C(20)
    - H(21)
    - C(22)
  - - H(23)
    - C(24)
    - H(25)
    - C(26)
  - - H(27)
    - N(28)
    - N(29)
    - N(30)
  - - N(31)
    - N(32)
    - N(33)
    - N(34)
  - - N(35)
    - N(36)
    - C(37)
    - C(38)
  - - C(39)
    - C(40)
    - C(41)
    - C(42)
  - - H(43)
    - H(44)
    - H(45)
    - C(46)
  - - C(47)
    - C(48)
    - H(49)
    - H(50)
  - - H(51)
    - C(52)
    - C(53)
    - C(54)
  - - H(55)
    - H(56)
    - H(57)
    - C(58)
  - - C(59)
    - C(60)
    - H(61)
    - H(62)
  - - H(63)
    - C(64)
    - C(65)
    - C(66)
  - - H(67)
    - H(68)
    - H(69)
    - C(70)
  - - C(71)
    - C(72)
    - C(73)
    - C(74)
  - - C(75)
    - H(76)
    - H(77)
    - H(78)
  - - C(79)
    - C(80)
    - C(81)
    - H(82)
  - - H(83)
    - H(84)
    - C(85)
    - C(86)
  - - C(87)
    - H(88)
    - H(89)
    - H(90)
  - - C(91)
    - C(92)
    - C(93)
    - H(94)
  - - H(95)
    - H(96)
    - C(97)
    - C(98)
  - - C(99)
    - H(100)
    - H(101)
    - H(102)
