umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@literature_tungsten_tetrakis_phenoxy_c4.snap
---
source: umol-geometric/tests/perception/mod.rs
assertion_line: 77
expression: result
---
point_group: C4
order: 4
equivalence_sets:
  - - W(0)
  - - O(1)
  - - O(2)
    - C(3)
    - C(4)
    - C(5)
  - - H(6)
    - C(7)
    - H(8)
    - C(9)
  - - H(10)
    - C(11)
    - C(12)
    - H(13)
  - - H(14)
    - H(15)
    - C(16)
    - H(17)
  - - H(18)
    - H(19)
    - O(20)
    - C(21)
  - - C(22)
    - C(23)
    - H(24)
    - C(25)
  - - H(26)
    - C(27)
    - H(28)
    - C(29)
  - - C(30)
    - H(31)
    - H(32)
    - H(33)
  - - C(34)
    - H(35)
    - H(36)
    - H(37)
  - - O(38)
    - C(39)
    - C(40)
    - C(41)
  - - H(42)
    - C(43)
    - H(44)
    - C(45)
  - - H(46)
    - C(47)
    - C(48)
    - H(49)
  - - H(50)
    - H(51)
    - C(52)
    - H(53)
  - - H(54)
    - H(55)
    - O(56)
    - C(57)
  - - C(58)
    - C(59)
    - H(60)
    - C(61)
  - - H(62)
    - C(63)
    - H(64)
    - C(65)
  - - C(66)
    - H(67)
    - H(68)
    - H(69)
  - - C(70)
    - H(71)
    - H(72)
    - H(73)
